add testing directory for unit_test_and_lint.yml

--- a/.github/workflows/unit_test_and_lint.yml
+++ b/.github/workflows/unit_test_and_lint.yml
@@ -35,7 +35,7 @@ jobs:
         git config --local user.name "$actor"
     - name: Test
       run: |
-        pytest .
+        pytest tests/
     - name: Format & lint
       run: |
         black . # first run black, then run flake8
