Add parallel computing for the first module. Finish implementation of population structure.

--- a/envs/environment.yaml
+++ b/envs/environment.yaml
@@ -1,13 +1,16 @@
 # environment.yaml
-name: genomics
+name: MugGWAS
 channels:
   - conda-forge
   - bioconda
   - defaults
 dependencies:
-  - python=3.9.9
+  - python=3.9
   - gffutils=0.13
   - pandas=2.1.4
   - biopython=1.81
   - argh=0.26.2
-  - pysam
+  - dendropy
+  - multiprocessing
+  - concurrent.futures
+  - time
